--- a/deploy/iso/minikube-iso/configs/minikube_defconfig
+++ b/deploy/iso/minikube-iso/configs/minikube_defconfig
@@ -71,3 +71,8 @@ BR2_PACKAGE_HTOP=y
 BR2_PACKAGE_CONNTRACK_TOOLS=y
 BR2_PACKAGE_TAR=y
 BR2_PACKAGE_LZ4=y
+BR2_PACKAGE_APPARMOR=y
+BR2_PACKAGE_LIBAPPARMOR=y
+BR2_PACKAGE_APPARMOR_UTILS=y
+BR2_PACKAGE_PYTHON3=y
+BR2_PACKAGE_APPARMOR_PROFILES=y
