--- a/deploy/iso/minikube-iso/package/Config.in
+++ b/deploy/iso/minikube-iso/package/Config.in
@@ -14,4 +14,6 @@ menu "System tools"
     source "$BR2_EXTERNAL_MINIKUBE_PATH/package/vbox-guest/Config.in"
     source "$BR2_EXTERNAL_MINIKUBE_PATH/package/containerd-bin/Config.in"
     source "$BR2_EXTERNAL_MINIKUBE_PATH/package/falco-module/Config.in"
+    source "$BR2_EXTERNAL_MINIKUBE_PATH/package/apparmor/Config.in"
+    source "$BR2_EXTERNAL_MINIKUBE_PATH/package/libapparmor/Config.in"
 endmenu
